<resources>
    <string name="app_name">نرسر</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_note">پیام ها</string>
    <string name="menu_library">کتابخانه</string>
    <string name="menu_profile">پروفایل</string>
    <string name="note_sample">
        قانون کاشت و برداشت اصل اساسی زندگی بشر است. شما امروز محصولی را برداشت می‌کنید که
در گذشته بذر آن را کاشته اید
    </string>
    <string name="title_notes">پیام های روزانه</string>
    <string name="add_to_favorites">اضافه کردن به علاقه مندی ها</string>
    <string name="share_note">به اشتراک گذاشتن یادداشت</string>
    <string name="title_movies">فیلم ها</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">دسته بندی ها</string>
    <string name="welcome">خوش آمدید</string>
    <string name="sign_up">ثبت نام</string>
    <string name="email">ایمیل</string>
    <string name="name">نام</string>
    <string name="password">رمز عبور</string>
    <string name="already_signedup">قبلا ثبت نام کرده اید؟</string>
    <string name="log_in">ورود</string>
    <string name="no_account">حساب کاربری ندارید؟</string>
    <string name="failed_connection">ارتباط برقرار نشد</string>
    <string name="motivation_notification_channel_id" translatable="false">motivation_channel</string>
    <string name="notification_title">Motivation</string>
    <string name="motivation_notification_channel_name">Motivation</string>
    <string name="motivation_notification_channel_description">Description</string>
    <string name="title_books">کتاب ها</string>
    <string name="title_podcasts">پادکست ها</string>
    <string name="share_app">به اشتراک گذاشتن نرسر</string>
    <string name="collections">مجموعه ها</string>
    <string name="past_motivations">یادداشت های گذشته</string>
    <string name="favorites">علاقه ها</string>
    <string name="add_to_collections">اضافه به مجموعه</string>
    <string name="dislike">نامناسب</string>
    <string name="description_favorite">- %s</string>
    <string name="delete">حذف</string>
</resources>
