<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        tools:context=".profile.ProfileFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share_app"
            style="@style/ButtonWithIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_share_32"
            android:drawableTint="@color/holo_green"
            android:text="@string/share_app" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_collections"
            style="@style/ButtonWithIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_collection_32"
            android:drawableTint="@color/holo_purple"
            android:text="@string/collections" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_past_motivations"
            style="@style/ButtonWithIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_past_32"
            android:drawableTint="@color/holo_blue"
            android:text="@string/past_motivations" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_favorite"
            style="@style/ButtonWithIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_favorite_32"
            android:drawableTint="@color/holo_red"
            android:text="@string/favorites" />
    </LinearLayout>
</layout>