<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.tehran.motivation.authentication.AuthenticationViewModel" />
    </data>


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        app:layoutDescription="@xml/activity_enter_scene"
        tools:context=".signup.SignUpFragment">

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/welcome"
            android:textColor="#95FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextPrimary"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/text_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/colorTextPrimary"
            android:textSize="36sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="32dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingTop="40dp"
                    android:paddingEnd="30dp">

                    <TextView
                        android:id="@+id/text_name_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editText_name_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:inputType="text"
                        app:layout_constraintEnd_toEndOf="@+id/text_email_sign_up"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_email_sign_up" />

                    <TextView
                        android:id="@+id/text_email_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="16dp"
                        android:text="@string/email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editText_email_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="@+id/text_email_sign_up"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_email_sign_up" />

                    <TextView
                        android:id="@+id/text_password_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="16dp"
                        android:text="@string/password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editText_password_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="@+id/text_email_sign_up"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_email_sign_up" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_go_login"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/transparent"
                        android:text="@string/already_signedup"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/button_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="48dp"
                        android:background="@drawable/bg_button_primary_color_round"
                        android:enabled="@{viewmodel.progressSignup.getContentIfNotHandled()}"
                        android:onClick="@{() -> viewmodel.signupButton()}"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp" />

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="32dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingTop="40dp"
                    android:paddingEnd="30dp">

                    <TextView
                        android:id="@+id/text_email_log_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="16dp"
                        android:text="@string/email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editText_email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:text="m@gmail.com"
                        app:layout_constraintEnd_toEndOf="@+id/text_email_log_in"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_email_log_in" />

                    <TextView
                        android:id="@+id/text_password_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="16dp"
                        android:text="@string/password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editText_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:text="1"
                        app:layout_constraintEnd_toEndOf="@+id/text_email_log_in"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_email_log_in" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_go_signup"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/transparent"
                        android:text="@string/no_account"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="48dp"
                        android:background="@drawable/bg_button_primary_color_round"
                        android:enabled="@{viewmodel.progressLogin.getContentIfNotHandled()}"
                        android:onClick="@{() -> viewmodel.loginButton()}"
                        android:text="@string/log_in"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp" />

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>