<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.tehran.motivation.library.LibraryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".library.LibraryFragment">

        <TextView
            android:id="@+id/text_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="16dp"
            android:text="@string/title_movies"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/videosList"
            videoList="@{viewmodel.videosList}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/text_movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_movies" />


        <TextView
            android:id="@+id/text_books"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_books"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="@+id/text_movies"
            app:layout_constraintStart_toStartOf="@+id/text_movies"
            app:layout_constraintTop_toBottomOf="@+id/videosList" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/booksList"
            videoList="@{viewmodel.videosList}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/videosList"
            app:layout_constraintStart_toStartOf="@id/videosList"
            app:layout_constraintTop_toBottomOf="@+id/text_books" />

        <TextView
            android:id="@+id/text_podcasts"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_podcasts"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="@+id/text_movies"
            app:layout_constraintStart_toStartOf="@+id/text_movies"
            app:layout_constraintTop_toBottomOf="@+id/booksList" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/podcastsList"
            videoList="@{viewmodel.videosList}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/videosList"
            app:layout_constraintStart_toStartOf="@id/videosList"
            app:layout_constraintTop_toBottomOf="@+id/text_podcasts" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>